# campus-rpg-web

./: .gitignore  NPC_ECO_DOCUMENTATION.md  README.md  achievements.html  debug-test.js  deep-debug.js  deploy.sh  game.html  index.html  manifest.json  npc.html  package-lock.json  package.json  profile.html  sw.js  tasks.html  校园RPG项目优化报告.doc
admin/: statistics.html
backend/: _run.bat  ar_api.py  ar_models.py  behavior_api.py  chat_api.py  diagnose_clues.py  diagnose_routes.py  main_story_api.py  npc_api.py  server.py  social_api.py  sync_api.py
css/: achievements-page.css  animations.css  auth.css  chat-widget.css  components.css  exploration.css  game.css  main.css  npc-ecosystem.css  npc-page.css  profile-modal.css  profile-page.css  tasks-page.css
data/: achievement_data.json  behavior_log.db  campus_bounds.json  campus_grid.json  campus_pois.json  leaderboard_cache.json  locations.json  main_story.json  story_clues.json  story_enhanced.json  story_events.json  story_hidden_tasks.json  story_puzzles.json  sync_meta.db  task_data.json  user_data_0aab5cd6.json  user_data_0b597d92.json  user_data_0e0ceb1d.json  user_data_1298c9db.json  user_data_1d998c64.json  user_data_1efd45f2.json  user_data_2188a05d.json  user_data_24675c09.json  user_data_25a75313.json  user_data_25aa81fc.json  user_data_26150d85.json  user_data_38856fa6.json  user_data_43df52eb.json  user_data_440a17fa.json  user_data_440a2936.json  user_data_4a92fdd2.json  user_data_4aab9979.json  (+43 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
(+66 files in other folders)
